Styles: fix text overflow in code snippets

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -19,6 +19,8 @@ code {
 pre {
   margin-top: 0;
   margin-bottom: 1rem;
+  overflow: auto;
+  white-space: pre-wrap;
 }
 
 pre code {
